<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@color/white"
        android:textColor="@color/buttons"
        android:padding="15dp"
        android:textSize="38sp"
        android:gravity="end|center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:background="@color/block"
        >

        <Button
            android:onClick="press"
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            />

        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/eight" />
        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:text="@string/nine"
            android:layout_weight="1"
            />
        <Button
            android:onClick="operator"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/slash"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/slash"
            android:layout_weight="1"
            />


</LinearLayout>
    <LinearLayout
        android:background="@color/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/four"
             />
        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/five"
            android:layout_weight="1"
            android:layout_margin="5dp"
            />
        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:text="@string/six"
            android:layout_weight="1"
            />
        <Button
            android:onClick="operator"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/into"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/into"
            android:layout_weight="1"
            />


    </LinearLayout>
    <LinearLayout
        android:background="@color/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/one"
            android:layout_weight="1"
            android:layout_margin="5dp"
         />
        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/two"
            android:layout_weight="1"
            android:layout_margin="5dp"
            />
        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:text="@string/three"
            android:layout_weight="1"
            />
        <Button
            android:onClick="operator"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/minus"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/minus"
            android:layout_weight="1"
            />


    </LinearLayout>
    <LinearLayout
        android:background="@color/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="press"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_weight="1"
            android:layout_margin="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:onClick="decimal"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dot"
            android:layout_weight="1"
            android:layout_margin="5dp"
            tools:ignore="NestedWeights" />
        <Button
            android:onClick="clear"
            android:textSize="20sp"
            android:textStyle="bold|normal"
            android:textColor="@color/clear"
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/clearscrn"
            android:layout_weight="1"
            android:layout_margin="5dp"
            />
        <Button
            android:onClick="operator"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:text="@string/plus"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:background="@color/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="equal"
            android:textSize="25sp"
            android:textStyle="bold|normal"
            android:textColor="@color/buttons"
            android:id="@+id/equalto"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/equalto"
            android:layout_weight="0.1"
            />
    </LinearLayout>
</LinearLayout>

